--- a/EspressifProvision/EspressifProvision/Info.plist
+++ b/EspressifProvision/EspressifProvision/Info.plist
@@ -39,6 +39,8 @@
 	<string>$(BUILD_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Bluetooth is required to provision ESP devices</string>
 	<key>NSBluetoothPeripheralUsageDescription</key>
 	<string>Connect with BLE Compatible devices for Provisioning</string>
 	<key>ProofOfPossession</key>
